tests/golden/errors/file_not_found.py
# An uncaught FileNotFoundError prints a traceback naming the class.
open("this_file_does_not_exist.tmp", "r")
